--- a/开发者日志.md
+++ b/开发者日志.md
@@ -1,4 +1,4 @@
-## 2019/10/27
+# 2019/10/27-添加开始界面-曾睿
 ### 新增项
 1. 新增文件目录js/page和js/component,其中/page用于存放开始界面等UI设计，而/component主要为UI提供封装的组件。
 2. page下新增index.js，作为开始界面。
