--- a/开发者日志.md
+++ b/开发者日志.md
@@ -15,3 +15,8 @@
 >> 具体流程可以研究/page/template.js，这是一个简化版的UI界面流程，待完善的主要是构造函数中初始化控件、render中绘制控件、和touchEventHandler中触发事件三个部分。
 ** 注意不要修改这个文件，可以复制后再添加内容。
 
+# 2019/11/1-初步添加成就界面-应铖阳
+### 新增项
+1.  page下新增achievement.js，作为成就界面。
+2.  在game.js中添加了成就界面的page为5
+3.  在index.js中添加了进入成就界面的方法
