--- a/开发者日志.md
+++ b/开发者日志.md
@@ -20,3 +20,9 @@
 1.  page下新增achievement.js，作为成就界面。
 2.  在game.js中添加了成就界面的page为5
 3.  在index.js中添加了进入成就界面的方法
+
+# 2019/11/6-初步添加商城界面-沈琳婕
+### 新增项
+1.  page下新增shop.js，作为商城界面；新增store.js进行数据存储
+2.  在game.js中添加了成就界面的page为6
+3.  在index.js中添加了进入商城界面的方法
