--- a/开发者日志.md
+++ b/开发者日志.md
@@ -30,3 +30,7 @@
 # 2019/11/7-改变部分UI界面-魏海宁
 ### 更改项
 1.  四张背景图，我方敌方飞机，按钮等
+
+# 2019/11/8-Debug（漂浮物）-许俊杰
+### 更改项
+1.修改main.js，解决了子弹达到最大排数时吃漂浮物排数重置的问题
