--- a/开发者日志.md
+++ b/开发者日志.md
@@ -43,3 +43,8 @@
 > 3.  修改/main.js，修改全局碰撞检测collisionDetection()方法，判定死亡条件变更为（hp == 0）；
 > 4.  修改/runtime/gameinfo.js，增加了新的renderPlayerStatus()方法，实现了初步的生命值、魔法值显示；
 > 5.  修改/common/util.js，增加了一个findLast()小方法。
+
+# 2019/11/21-修改商城实现方法-沈琳婕
+### 新增项
+1.  重写了shop.js和store.js，删除images中部分图片
+2.  修改game.js中shop和store的创建方式
