--- a/开发者日志.md
+++ b/开发者日志.md
@@ -45,6 +45,6 @@
 > 5.  修改/common/util.js，增加了一个findLast()小方法。
 
 # 2019/11/21-修改商城实现方法-沈琳婕
-### 新增项
+### 更改项
 1.  重写了shop.js和store.js，删除images中部分图片
 2.  修改game.js中shop和store的创建方式
