--- a/开发者日志.md
+++ b/开发者日志.md
@@ -48,3 +48,9 @@
 ### 更改项
 1.  重写了shop.js和store.js，删除images中部分图片
 2.  修改game.js中shop和store的创建方式
+
+# 2019/11/28-修改成就界面-应铖阳
+### 新增项
+1.  page下新增achieve_store.js，作为成就界面需要的一些数据存储的界面。
+2.  修改game.js中achievement和achieve_store的创建方式
+3.  在成就界面加入判断是否已经完成成就（现在的问题是如何存储上一次玩的数据）
