--- a/开发者日志.md
+++ b/开发者日志.md
@@ -54,3 +54,4 @@
 1.  page下新增achieve_store.js，作为成就界面需要的一些数据存储的界面。
 2.  修改game.js中achievement和achieve_store的创建方式
 3.  在成就界面加入判断是否已经完成成就（现在的问题是如何存储上一次玩的数据）
+4.  增加了两个成就
