--- a/开发者日志.md
+++ b/开发者日志.md
@@ -55,3 +55,9 @@
 2.  修改game.js中achievement和achieve_store的创建方式
 3.  在成就界面加入判断是否已经完成成就（现在的问题是如何存储上一次玩的数据）
 4.  增加了两个成就
+
+
+# 2019/11/28-修改存储方法-沈琳婕
+### 更改项
+1.  将物品仓库数据（包括金钱、道具、已解锁关卡和皮肤）存入本地缓存中
+2.  游戏结束时，将获得10 * 游戏得分的金钱
