--- a/开发者日志.md
+++ b/开发者日志.md
@@ -61,3 +61,8 @@
 ### 更改项
 1.  将物品仓库数据（包括金钱、道具、已解锁关卡和皮肤）存入本地缓存中
 2.  游戏结束时，将获得10 * 游戏得分的金钱
+
+# 2019/11/28-修改成就界面-应铖阳
+### 新增项
+1.  将成就需要的数据存入本地缓存中
+2.  具体实现了三个成就，分别是金钱总数，击落敌机数，玩游戏次数。当完成这三个成就之后成就界面将会显示已完成。
