add entertainment mode

--- a/开发者日志.md
+++ b/开发者日志.md
@@ -48,3 +48,9 @@
 ### 更改项
 1.  重写了shop.js和store.js，删除images中部分图片
 2.  修改game.js中shop和store的创建方式
+
+# 2019/11/21-初步添加娱乐模式-王雨阳
+### 更改项
+1.  修改了world.js中的按钮，使第四个按钮成为进入娱乐模式的入口
+2.  创建entertainmentchoose，使娱乐模式可以进行模式选择。
+3.  创建entertainment文件夹并创建harvest.js文件，初步实现了割草模式。
