--- a/开发者日志.md
+++ b/开发者日志.md
@@ -49,13 +49,14 @@
 1.  重写了shop.js和store.js，删除images中部分图片
 2.  修改game.js中shop和store的创建方式
 
-<<<<<<< HEAD
+
 # 2019/11/28-初步添加娱乐模式-王雨阳
 ### 更改项
 1.  修改了world.js中的按钮，使第四个按钮成为进入娱乐模式的入口
 2.  创建entertainmentchoose，使娱乐模式可以进行模式选择。
 3.  创建entertainment文件夹并创建harvest.js文件，初步实现了割草模式。
-=======
+
+
 # 2019/11/28-修改成就界面-应铖阳
 ### 新增项
 1.  page下新增achieve_store.js，作为成就界面需要的一些数据存储的界面。
@@ -74,4 +75,7 @@
 1.  将成就需要的数据存入本地缓存中
 2.  具体实现了三个成就，分别是金钱总数，击落敌机数，玩游戏次数。当完成这三个成就之后成就界面将会显示已完成。
 （注：在具体使用的时候微信开发者工具有清除缓存的功能，可以更好的调试）
->>>>>>> c5d7c3531e46c446f5c1a3ab78f8095a3ddd6b67
+
+#2019//11/28-修改娱乐模式-王雨阳
+### 更改项
+1.  修改了由于GitHub pull导致的bug。
