Floatage and Freighter

--- a/开发者日志.md
+++ b/开发者日志.md
@@ -79,3 +79,10 @@
 # 2019/11/28-修改娱乐模式-王雨阳
 ### 更改项
 1.  修改了由于GitHub pull导致的bug。
+
+# 2019/11/29-修改漂浮物和运输机-杨瀚思
+### 更改项
+1. 修改漂浮物消失逻辑，一定时间内未被捕捉就消失（目前设置时间较长）
+2. 增加不同漂浮物类型
+3. 漂浮物在属性点满后改为增加分数
+4. 运输机增加HP属性
