--- a/开发者日志.md
+++ b/开发者日志.md
@@ -79,3 +79,9 @@
 # 2019/11/28-修改娱乐模式-王雨阳
 ### 更改项
 1.  修改了由于GitHub pull导致的bug。
+
+# 2019/11/29-修改关卡进入显示模式-魏海宁
+### 更改项
+1.mission.js 	store.js	main.js 中涉及的有关关卡是否开放的代码
+2.新增DataBus.GameWin = 3这个状态
+3.设置需要获得一定的分数才能通关的逻辑（在constant.js的Boss这一项中，之后可以改为到达分数生成boss，然后在main的429行修改DataBus.GameWin的状态）
