统一关卡显示

--- a/开发者日志.md
+++ b/开发者日志.md
@@ -88,3 +88,8 @@
 3. 漂浮物在属性点满后改为增加分数
 4. 运输机增加HP属性
 
+# 2019/11/29-修改关卡进入显示模式-魏海宁
+### 更改项
+1.mission.js 	store.js	main.js 中涉及的有关关卡是否开放的代码
+2.新增DataBus.GameWin = 3这个状态
+3.设置需要获得一定的分数才能通关的逻辑（在constant.js的Boss这一项中，之后可以改为到达分数生成boss，然后在main的429行修改DataBus.GameWin的状态）
