--- a/开发者日志.md
+++ b/开发者日志.md
@@ -94,3 +94,10 @@
 2. 新增DataBus.GameWin = 3这个状态
 3. 设置需要获得一定的分数才能通关的逻辑（在constant.js的Boss这一项中，之后可以改为到达分数生成boss，然后在main的429行修改DataBus.GameWin的状态）
 4. 切换背景音乐逻辑
+
+
+# 2019/11/30-新增游戏中道具栏-曾睿
+### 新增项
+1. player/index.js新增hpinf和mpinf，代表无敌和无限蓝。
+2. gameinfo.js中增加rendertools，渲染道具栏。判定第几个道具被使用，返回message中为tool+道具标号。
+3. main.js中增加usetool()，根据返回的message使用不同的道具。目前完成了2和5号道具，对应无敌和无限蓝。
