--- a/开发者日志.md
+++ b/开发者日志.md
@@ -101,3 +101,10 @@
 1. player/index.js新增hpinf和mpinf，代表无敌和无限蓝。
 2. gameinfo.js中增加rendertools，渲染道具栏。判定第几个道具被使用，返回message中为tool+道具标号。
 3. main.js中增加usetool()，根据返回的message使用不同的道具。目前完成了2和5号道具，对应无敌和无限蓝。
+
+# 2019/12/06-新增npc中boss以及分享功能接口搭建-廖在豪
+### 新增项
+1. npc/boss.js新建boss类，hp初设为10。
+2. constants.js中增加boss类参数。
+3. main.js中增加boss生成、boss与bullet以及player的检测，现在生成逻辑尚有问题，初步定为达到通关分数之前生成敌机和运输机，达到通关分数后产生boss，需要负责全局逻辑的同学进行修改。
+4.gameinfo.js中在游戏开始和游戏结束界面加入分享窗口
