修改boss生成逻辑

--- a/开发者日志.md
+++ b/开发者日志.md
@@ -108,3 +108,12 @@
 2. constants.js中增加boss类参数。
 3. main.js中增加boss生成、boss与bullet以及player的检测，现在生成逻辑尚有问题，初步定为达到通关分数之前生成敌机和运输机，达到通关分数后产生boss，需要负责全局逻辑的同学进行修改。
 4.gameinfo.js中在游戏开始和游戏结束界面加入分享窗口
+
+# 2019/12/13-修改boss生成逻辑-魏海宁
+### 新增项
+main.js中boss-flag和boss-life 两个标志，用于标记boss能不能生成，有没有被击败
+### 修改项
+1. main.js中bossgenerate没有判别条件直接生成
+2. 每次update中先判断分数，再判断boss-flag标志，生成boss，立刻改变标志，保证只生成一次
+3. 当有boss.destroy时改变boss-life标志
+4. 增加update中boss-life标志对游戏状态的改变
